--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "hw1-wachiranan-MyPokedex",
+  "name": "MyPokedex",
   "version": "1.0.0",
   "description": "web for Display list of pokemon that I have catched",
   "main": "index.html",
   "scripts": {
-    "start": "node_modules/.bin/http-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FrontTechsTU/hw1-example.git"
+    "build": "./node_modules/.bin/webpack --display-error-details",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base dist",
+    "babel": "./node_modules/.bin/babel src -d dist"
   },
   "author": "Wachiranan Unmee",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/FrontTechsTU/hw1-example/issues"
-  },
-  "homepage": "https://github.com/FrontTechsTU/hw1-example#readme",
   "devDependencies": {
-    "http-server": "^0.9.0"
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "http-server": "^0.9.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
