--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "description": "web for Display list of pokemon that I have catched",
   "main": "index.html",
   "scripts": {
-    "build": "./node_modules/.bin/webpack --display-error-details",
+    "build": ".\\node_modules\\.bin\\webpack --display-error-details",
     "start": "./node_modules/.bin/webpack-dev-server --content-base dist",
     "babel": "./node_modules/.bin/babel src -d dist"
   },
   "author": "Wachiranan Unmee",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FrontTechsTU/MyPokedex.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FrontTechsTU/MyPokedex/issues"
+  },
+  "homepage": "https://github.com/FrontTechsTU/MyPokedex#readme",
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.16.0",
     "http-server": "^0.9.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
