--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
